# ICRC2_token_wallet

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
frontend/: app.js  index.html  package.json  style.css
frontend/assets/: .ic-assets.json5
src/token_wallet_backend/: Cargo.toml  lib.rs  token_wallet_backend.did
